tests/compiletests/ui/arch/subgroup/subgroup_cluster_size_0_fail.stderr
error[E0080]: evaluation panicked: `ClusterSize` must be at least 1
  --> $SPIRV_STD_SRC/arch/subgroup.rs:826:1
   |
LL | / macro_subgroup_op_clustered!(impl Integer, "OpGroupNonUniformIAdd", subgroup_clustered_i_add; r"
LL | | An integer add group operation of all `value` operands contributed by active invocations in the group.
LL | |
LL | | Result Type must be a scalar or vector of integer type.
...  |
LL | | * `ClusterSize` must not be greater than the size of the group
LL | | ");
   | |__^ evaluation of `spirv_std::arch::subgroup_clustered_i_add::<0, u32, u32>::{constant#0}` failed here
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `macro_subgroup_op_clustered` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant encountered
  --> $SPIRV_STD_SRC/arch/subgroup.rs:826:1
   |
LL | / macro_subgroup_op_clustered!(impl Integer, "OpGroupNonUniformIAdd", subgroup_clustered_i_add; r"
LL | | An integer add group operation of all `value` operands contributed by active invocations in the group.
LL | |
LL | | Result Type must be a scalar or vector of integer type.
...  |
LL | | * `ClusterSize` must not be greater than the size of the group
LL | | ");
   | |__^
   |
   = note: this note originates in the macro `macro_subgroup_op_clustered` (in Nightly builds, run with -Z macro-backtrace for more info)

note: the above error was encountered while instantiating `fn spirv_std::arch::subgroup_clustered_i_add::<0, u32, u32>`
  --> $DIR/subgroup_cluster_size_0_fail.rs:10:5
   |
LL |     spirv_std::arch::subgroup_clustered_i_add::<0, _>(value)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
